// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: NavigationBar 1`] = `
.c0 {
  border-bottom: 3px solid #e60000;
  height: 56px;
  text-align: center;
  width: '100%';
}

.c1 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c3 {
  float: left;
  padding-top: 15px;
  width: calc(100% - 100px);
}

.c5 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c4 {
  color: #333;
  font-size: 18px;
  font-weight: bold;
}

.c2 {
  color: #e60000;
  font-size: 30px;
}

<NavigationBar
  onClickBack={[Function]}
  onClickForward={[Function]}
  title="タイトル"
>
  <styled.nav>
    <nav
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.button
            onClick={[Function]}
          >
            <button
              className="c2"
              onClick={[Function]}
            >
              &lt;
            </button>
          </styled.button>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c3"
        >
          <styled.p>
            <p
              className="c4"
            >
              タイトル
            </p>
          </styled.p>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c5"
        >
          <styled.button
            onClick={[Function]}
          >
            <button
              className="c2"
              onClick={[Function]}
            >
              &gt;
            </button>
          </styled.button>
        </div>
      </styled.div>
    </nav>
  </styled.nav>
</NavigationBar>
`;

exports[`should match snapshot: NavigationBar 2`] = `
.c0 {
  border-bottom: 3px solid #e60000;
  height: 56px;
  text-align: center;
  width: '100%';
}

.c1 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c2 {
  float: left;
  padding-top: 15px;
  width: calc(100% - 100px);
}

.c4 {
  float: left;
  padding-top: 10px;
  width: 50px;
}

.c3 {
  color: #333;
  font-size: 18px;
  font-weight: bold;
}

<NavigationBar
  onClickBack={null}
  onClickForward={null}
  title="タイトル"
>
  <styled.nav>
    <nav
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        />
      </styled.div>
      <styled.div>
        <div
          className="c2"
        >
          <styled.p>
            <p
              className="c3"
            >
              タイトル
            </p>
          </styled.p>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c4"
        />
      </styled.div>
    </nav>
  </styled.nav>
</NavigationBar>
`;
